# Brain-Tumor-Detection

./: .gitignore  .pre-commit-config.yaml  EXPERIMENTS.md  Makefile  PAPER_UPDATE_BRIEF.md  README.md  pyproject.toml
app/: streamlit_app.py
configs/: config.yaml  cpu.yaml  data.cpu.yaml  data.yaml  experiment.yaml  finetune.yaml  model.cpu.yaml  model.yaml  ssl.yaml
scripts/: diagnose.py
src/brain_tumor_ssl/: __init__.py  cli.py  config.py  inference.py  runner.py
src/brain_tumor_ssl/data/: __init__.py  datasets.py  indexing.py  splits.py  synthetic.py  transforms.py
src/brain_tumor_ssl/evaluation/: __init__.py  explain.py  metrics.py
src/brain_tumor_ssl/models/: __init__.py  backbone.py  classifier.py  heads.py
src/brain_tumor_ssl/training/: __init__.py  callbacks.py  finetune.py  losses.py  ssl_simclr.py
src/brain_tumor_ssl/utils/: __init__.py  device.py  io.py  logging.py  seed.py
tests/: test_config.py  test_explain.py  test_inference.py  test_metrics.py  test_models.py  test_runner.py  test_splits.py  test_transforms.py
