[project]
name = "brain-tumor-ssl"
version = "0.1.0"
description = "Label-efficient, leakage-free, explainable brain tumor MRI classification (SimCLR + FixMatch + ViT)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Saurabh Pandey" }]
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=1.0.7",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.2",
    "imagehash>=4.3",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "loguru>=0.7",
    "streamlit>=1.33",
]

[project.scripts]
btssl = "brain_tumor_ssl.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_tumor_ssl"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["notebooks", "reference"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "D", "ANN", "RUF"]
ignore = ["D203", "D213", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]
"app/*" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["brain_tumor_ssl"]
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
